Wed May 27 18:03:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Notify_Service/Notify_Service.h:
          Fixed compile error with OpenVMS

Wed May 27 11:58:05 UTC 2009  Carlos O'Ryan  <coryan@glamdring>

        * tests/Bug_3647_Regression/client.cpp:
          I guess not all compilers know that 'and' is a keyword in C++.

        * tests/Bug_3647_Regression/Middle_Impl.cpp:
          Make sure I use the exceptions caught in this program, at least
          for debugging output.  Eliminates warnings for VC8

Wed May 27 03:00:37 UTC 2009  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/Bug_3647_Regression/client.cpp:
        * tests/Bug_3647_Regression/middle_server.cpp:
        * tests/Bug_3647_Regression/backend_server.cpp:
          Fixed Unicode build problems.

Tue May 26 17:09:00 UTC 2009  Carlos O'Ryan  <coryan@atdesk.com>

        * tao/Transport.h:
        * tao/IIOP_Transport.h:
        * tao/Transport.cpp:
        * tao/IIOP_Transport.cpp:
        * tests/Bug_3647_Regression/client.cpp:
        * tests/Bug_3647_Regression/Middle_Impl.cpp:
        * tests/Bug_3647_Regression/Middle_Impl.h:
        * tests/Bug_3647_Regression/middle_server.cpp:
        * tests/Bug_3647_Regression/Test.idl:
        * tests/Bug_3647_Regression/Backend_Impl.cpp:
        * tests/Bug_3647_Regression/run_test.pl:
        * tests/Bug_3647_Regression/Backend_Impl.h:
          Fix fuzz problems, tabs, indentation in perl scripts, the Id
          stuff, etc.

Tue May 26 11:25:03 UTC 2009  Carlos O'Ryan  <coryan@glamdring>

        * tao/Transport.h:
        * tao/IIOP_Transport.h:
        * tao/IIOP_Transport.cpp:
          I had the signature of sendfile() completely wrong in
          IIOP_Transport.  Lucky for me, Johnny pointed out the warnings
          in the Solaris10_Studio12_Debug build.
          I also had to move the io_timeout() function in Tranport to the
          protected section.  This whole sendfile() thing looks like a